--- a/src/Eventuous.Connectors.EsdbElastic/Eventuous.Connectors.EsdbElastic.csproj
+++ b/src/Eventuous.Connectors.EsdbElastic/Eventuous.Connectors.EsdbElastic.csproj
@@ -9,12 +9,18 @@
 
     <ItemGroup>
         <PackageReference Include="Eventuous.Connectors.Base" Version="$(EventuousVersion)" />
+        <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)" />
         <PackageReference Include="Eventuous.ElasticSearch" Version="$(EventuousVersion)" />
         <PackageReference Include="Eventuous.EventStore" Version="$(EventuousVersion)" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+        <PackageReference Include="OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient" Version="1.0.0-beta2" />
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.2.0-rc3" />
+        <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="1.2.0-rc3" />
         <PackageReference Include="Serilog" Version="2.10.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
         <PackageReference Include="NetEscapades.Configuration.Yaml" Version="2.2.0" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.0.0-rc9" />
     </ItemGroup>
 </Project>
