--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,10 +1,10 @@
 connector:
   subscriptionId: "esdb-elastic-connector"
 source:
-  connectionString: "esdb://localhost:2113?tls=false"
-  concurrencyLimit: 1
+  connectionString: "esdb://esdb:2113?tls=false"
+  concurrencyLimit: 10
 target:
-  connectionString: "http://localhost:9200"
+  connectionString: "http://es01:9200"
   dataStream:
     indexName: "eventlog"
     template:
