--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -143,6 +143,7 @@ services:
       - "1888:1888"
       - "13133:13133"
       - "9411"
+      - "4317"
       - "55679:55679"
     depends_on:
       - jaeger
@@ -159,8 +160,13 @@ services:
     image: eventuous/connector-esdb-elastic:main
     volumes:
       - ./config.yaml:/app/config.yaml
+    environment:
+      - OTEL_EXPORTER_OTLP_ENDPOINT=otel-collector:4317
     ports:
       - "5001:5000"
+    depends_on:
+      - es01
+      - esdb
 
 volumes:
   hot_data:
