Fixed retries and connector id

--- a/src/Eventuous.Connectors.EsdbElastic/config.yaml
+++ b/src/Eventuous.Connectors.EsdbElastic/config.yaml
@@ -1,5 +1,5 @@
 connector:
-  subscriptionId: "esdb-elastic-connector"
+  connectorId: "esdb-elastic-connector"
 source:
   connectionString: "esdb://localhost:2113?tls=false"
   concurrencyLimit: 1
