--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,5 +1,5 @@
 connector:
-  subscriptionId: "esdb-elastic-connector"
+  connectorId: "esdb-elastic-connector"
 source:
   connectionString: "esdb://esdb:2113?tls=false"
   concurrencyLimit: 10
