--- a/src/connector-esdb-elastic/connector-esdb-elastic.csproj
+++ b/src/connector-esdb-elastic/connector-esdb-elastic.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <RootNamespace>connector_esdb_elastic</RootNamespace>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
