--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -3,7 +3,7 @@ name: Publish Preview NuGet
 on:
   push:
     branches:
-      - dev
+      - main
     paths-ignore:
       - '**.md'
       - '**.yaml'
