Upgrade to Eventuous 0.7.0 and align the persisted event

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - hot_data:/usr/share/elasticsearch/data
       - snapshots:/usr/share/elasticsearch/snapshots
     ports:
-      - 9200:9200
+      - "9200:9200"
     networks:
       - elastic
   
@@ -145,7 +145,7 @@ services:
       - "9411"
       - "55679:55679"
     depends_on:
-      - jaeger
+      - zipkin
 
 volumes:
   hot_data:
