--- a/src/Eventuous.Connector/Eventuous.Connector.csproj
+++ b/src/Eventuous.Connector/Eventuous.Connector.csproj
@@ -1,20 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <RootNamespace>connector_esdb_elastic</RootNamespace>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Eventuous.Connector.EsdbElastic\Eventuous.Connector.EsdbElastic.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient" Version="1.0.0-beta2" />
         <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.2.0-rc5" />
         <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.2.0-rc5" />
         <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="1.2.0-rc5" />
         <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.2.0-rc5" />
-        <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.0.0-rc9.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Eventuous.Connector.EsdbElastic\Eventuous.Connector.EsdbElastic.csproj" />
+      <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+      <None Update="config.yaml">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 </Project>
