--- a/src/Eventuous.Connector.Base/Eventuous.Connector.Base.csproj
+++ b/src/Eventuous.Connector.Base/Eventuous.Connector.Base.csproj
@@ -1,9 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <IsPackable>true</IsPackable>
     </PropertyGroup>
-
     <ItemGroup>
         <PackageReference Include="Eventuous.AspNetCore" Version="$(EventuousVersion)" />
         <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)" />
@@ -12,8 +10,13 @@
         <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
         <PackageReference Include="NetEscapades.Configuration.Yaml" Version="2.2.0" />
+        <PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
+        <PackageReference Include="Grpc.Tools" Version="2.45.0" PrivateAssets="All" />
     </ItemGroup>
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    </ItemGroup>
+    <ItemGroup>
+        <Protobuf Include="Grpc\Protos\project.proto" GrpcServices="Client" />
     </ItemGroup>
 </Project>
