--- a/src/Eventuous.Connector.EsdbElastic/Eventuous.Connector.EsdbElastic.csproj
+++ b/src/Eventuous.Connector.EsdbElastic/Eventuous.Connector.EsdbElastic.csproj
@@ -2,7 +2,6 @@
     <PropertyGroup>
         <IsPackable>true</IsPackable>
     </PropertyGroup>
-
     <ItemGroup>
         <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)" />
         <PackageReference Include="Eventuous.ElasticSearch" Version="$(EventuousVersion)" />
@@ -10,9 +9,12 @@
         <PackageReference Include="Eventuous.Subscriptions.Polly" Version="$(EventuousVersion)" />
         <PackageReference Include="OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient" Version="1.0.0-beta2" />
         <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.0.0-rc9.2" />
+        <PackageReference Include="Grpc.Tools" Version="2.45.0" PrivateAssets="All" />
     </ItemGroup>
-
     <ItemGroup>
-      <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj" />
+        <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+        <Protobuf Include="Grpc\Protos\client.proto" GrpcServices="Client" AdditionalImportDirs=".; ..\..\src" />
     </ItemGroup>
 </Project>
