--- a/src/Eventuous.Connector/config-sqlserver.yaml
+++ b/src/Eventuous.Connector/config-sqlserver.yaml
@@ -1,6 +1,6 @@
 connector:
-  connectorId: "esdb-elastic-connector"
-  connectorAssembly: "Eventuous.Connector.EsdbElastic"
+  connectorId: "esdb-sql-connector"
+  connectorAssembly: "Eventuous.Connector.SqlServer"
   diagnostics:
     tracing:
       enabled: true
@@ -13,7 +13,6 @@ source:
   connectionString: "esdb://localhost:2113?tls=false"
   concurrencyLimit: 1
 target:
-  connectionString: "http://localhost:9200"
-  connectorMode: "project"
-  dataStream:
-    indexName: "test"
+  connectionString: "Server=localhost;Database=test;User=sa;Password=Your_password123;Encrypt=True;TrustServerCertificate=True"
+grpc:
+  uri: "http://localhost:9091"
