Added the mongo projector

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -4,6 +4,8 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <EventuousVersion>0.8.1-alpha.0.7</EventuousVersion>
+        <OtelVersion>1.3.0-beta.1</OtelVersion>
+        <OtelExtensionsVersion>1.0.0-rc9.3</OtelExtensionsVersion>
         <RepoRoot>$([System.IO.Directory]::GetParent($(MSBuildThisFileDirectory)).Parent.FullName)</RepoRoot>
     </PropertyGroup>
 
