--- a/src/Eventuous.Connector.Mongo/config-mongo.yaml
+++ b/src/Eventuous.Connector.Mongo/config-mongo.yaml
@@ -14,7 +14,6 @@ source:
   concurrencyLimit: 1
 target:
   connectionString: "mongodb://mongoadmin:secret@localhost:27017"
-  database: "bookings"
-  collection: "allBookings"
+  collection: bookings
 grpc:
   uri: "http://localhost:9091"
