--- a/src/Eventuous.Connector.SqlServer/Eventuous.Connector.SqlServer.csproj
+++ b/src/Eventuous.Connector.SqlServer/Eventuous.Connector.SqlServer.csproj
@@ -3,22 +3,22 @@
         <IsPackable>false</IsPackable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)"/>
-        <PackageReference Include="Eventuous.EventStore" Version="$(EventuousVersion)"/>
-        <PackageReference Include="Eventuous.Subscriptions.Polly" Version="$(EventuousVersion)"/>
-        <PackageReference Include="EventStore.Client.Grpc" Version="22.0.0"/>
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0"/>
-        <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.0.0-rc9.2"/>
-        <PackageReference Include="Grpc.Tools" Version="2.45.0" PrivateAssets="All"/>
-        <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc9.3"/>
+        <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)" />
+        <PackageReference Include="Eventuous.EventStore" Version="$(EventuousVersion)" />
+        <PackageReference Include="Eventuous.Subscriptions.Polly" Version="$(EventuousVersion)" />
+        <PackageReference Include="EventStore.Client.Grpc" Version="22.0.0" />
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="$(OtelExtensionsVersion)" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="$(OtelExtensionsVersion)" />
+        <PackageReference Include="Grpc.Tools" Version="2.45.0" PrivateAssets="All" />
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj"/>
+        <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj" />
         <!--        <ProjectReference Include="..\..\..\..\eventuous\src\EventStore\src\Eventuous.EventStore\Eventuous.EventStore.csproj" />-->
         <!--        <ProjectReference Include="..\..\..\..\eventuous\src\Experimental\src\Eventuous.ElasticSearch\Eventuous.ElasticSearch.csproj" />-->
         <!--        <ProjectReference Include="..\..\..\..\eventuous\src\Gateway\src\Eventuous.Gateway\Eventuous.Gateway.csproj" />-->
     </ItemGroup>
     <ItemGroup>
-        <Protobuf Include="Grpc\Protos\client.proto" GrpcServices="Client" AdditionalImportDirs=".; ..\..\src"/>
+        <Protobuf Include="Grpc\Protos\client.proto" GrpcServices="Client" AdditionalImportDirs=".; ..\..\src" />
     </ItemGroup>
 </Project>
