--- a/src/Eventuous.Connector.SqlServer/config-project.yaml
+++ b/src/Eventuous.Connector.SqlServer/config-project.yaml
@@ -1,6 +1,6 @@
 connector:
-  connectorId: "esdb-mongo-connector"
-  connectorAssembly: "Eventuous.Connector.Mongo"
+  connectorId: "esdb-sql-connector"
+  connectorAssembly: "Eventuous.Connector.SqlServer"
   diagnostics:
     tracing:
       enabled: true
@@ -13,8 +13,6 @@ source:
   connectionString: "esdb://localhost:2113?tls=false"
   concurrencyLimit: 1
 target:
-  connectionString: "mongodb://mongoadmin:secret@localhost:27017"
-  database: "bookings"
-  collection: "allBookings"
+  connectionString: "Server=localhost;Database=test;User=sa;Password=Your_password123;Encrypt=True;TrustServerCertificate=True"
 grpc:
   uri: "http://localhost:9091"
