--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            eventuous/connector-esdb-elastic
+            eventuous/connector
           tags: |
             type=ref,event=branch
             type=ref,event=pr
