--- a/src/Eventuous.Connector.EsdbSqlServer/docker-compose.yml
+++ b/src/Eventuous.Connector.EsdbSqlServer/docker-compose.yml
@@ -1,24 +1,8 @@
 version: '3.7'
 
 services:
-  esdb:
-    container_name: eventuous-sql-esdb
-    image: ghcr.io/eventstore/eventstore:21.10.0-alpha-arm64v8
-    ports:
-      - '2113:2113'
-      - '1113:1113'
-    environment:
-      EVENTSTORE_INSECURE: 'true'
-      EVENTSTORE_CLUSTER_SIZE: 1
-      EVENTSTORE_EXT_TCP_PORT: 1113
-      EVENTSTORE_HTTP_PORT: 2113
-      EVENTSTORE_ENABLE_EXTERNAL_TCP: 'true'
-      EVENTSTORE_RUN_PROJECTIONS: all
-      EVENTSTORE_START_STANDARD_PROJECTIONS: "true"
-      EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP: "true"
-
-  db:
-    container_name: eventuous-sql-db
+  sqlserver:
+    container_name: eventuous-connector-sqlserver
     image: "mcr.microsoft.com/azure-sql-edge"
     ports:
       - "1433:1433"
@@ -26,12 +10,6 @@ services:
       SA_PASSWORD: "Your_password123"
       ACCEPT_EULA: "Y"
 
-  zipkin:
-    image: openzipkin/zipkin
-    container_name: eventuous-sql-zipkin
-    ports:
-      - "9411:9411"
-
 networks:
-  eventuous-connectors:
+  eventuous-connector-sql:
     driver: bridge
