--- a/src/Eventuous.Connector/Eventuous.Connector.csproj
+++ b/src/Eventuous.Connector/Eventuous.Connector.csproj
@@ -4,22 +4,22 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="$(OtelVersion)" />
-        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="$(OtelVersion)" />
-        <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="$(OtelVersion)" />
-        <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="$(OtelVersion)" />
+        <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="$(OtelVersion)"/>
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="$(OtelVersion)"/>
+        <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="$(OtelVersion)"/>
+        <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="$(OtelVersion)"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj" />
-<!--        <ProjectReference Include="..\Eventuous.Connector.EsdbElastic\Eventuous.Connector.EsdbElastic.csproj" />-->
-        <ProjectReference Include="..\Eventuous.Connector.EsdbMongo\Eventuous.Connector.EsdbMongo.csproj" />
-        <!--        <ProjectReference Include="..\Eventuous.Connector.SqlServer\Eventuous.Connector.SqlServer.csproj" />-->
+        <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj"/>
+        <ProjectReference Include="..\Eventuous.Connector.EsdbElastic\Eventuous.Connector.EsdbElastic.csproj"/>
+        <ProjectReference Include="..\Eventuous.Connector.EsdbMongo\Eventuous.Connector.EsdbMongo.csproj"/>
+        <ProjectReference Include="..\Eventuous.Connector.EsdbSqlServer\Eventuous.Connector.EsdbSqlServer.csproj"/>
     </ItemGroup>
 
     <ItemGroup Condition="$(Configuration) == 'Debug'">
-      <None Update="config.yaml">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
+        <None Update="config.yaml">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
