--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
   zipkin:
     image: openzipkin/zipkin
-    container_name: zipkin
+    container_name: eventuous-connector-zipkin
     ports:
       - "9411:9411"
 
