--- a/src/Eventuous.Connector.EsdbSqlServer/Eventuous.Connector.EsdbSqlServer.csproj
+++ b/src/Eventuous.Connector.EsdbSqlServer/Eventuous.Connector.EsdbSqlServer.csproj
@@ -1,28 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <IsPackable>true</IsPackable>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)" />
-        <PackageReference Include="Eventuous.ElasticSearch" Version="$(EventuousVersion)" />
         <PackageReference Include="Eventuous.EventStore" Version="$(EventuousVersion)" />
         <PackageReference Include="Eventuous.Subscriptions.Polly" Version="$(EventuousVersion)" />
-        <PackageReference Include="OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient" Version="1.0.0-beta2" />
+        <PackageReference Include="EventStore.Client.Grpc" Version="22.0.0" />
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
         <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="$(OtelExtensionsVersion)" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="$(OtelExtensionsVersion)" />
         <PackageReference Include="Grpc.Tools" Version="2.45.0" PrivateAssets="All" />
     </ItemGroup>
     <ItemGroup>
+        <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj" />
         <!--        <ProjectReference Include="..\..\..\..\eventuous\src\EventStore\src\Eventuous.EventStore\Eventuous.EventStore.csproj" />-->
         <!--        <ProjectReference Include="..\..\..\..\eventuous\src\Experimental\src\Eventuous.ElasticSearch\Eventuous.ElasticSearch.csproj" />-->
         <!--        <ProjectReference Include="..\..\..\..\eventuous\src\Gateway\src\Eventuous.Gateway\Eventuous.Gateway.csproj" />-->
-        <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <Protobuf Include="Grpc\Protos\client.proto" GrpcServices="Client" AdditionalImportDirs=".; .." />
-    </ItemGroup>
-    <ItemGroup>
-        <None Update="config-produce.yaml">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
+        <Protobuf Include="Grpc\Protos\client.proto" GrpcServices="Client" AdditionalImportDirs=".; ..\..\src" />
     </ItemGroup>
 </Project>
