--- a/src/Eventuous.Connector/config.yaml
+++ b/src/Eventuous.Connector/config.yaml
@@ -1,6 +1,6 @@
 connector:
-  connectorId: "esdb-sql-connector"
-  connectorAssembly: "Eventuous.Connector.EsdbSqlServer"
+  connectorId: "esdb-mongo-connector"
+  connectorAssembly: "Eventuous.Connector.EsdbMongo"
   diagnostics:
     tracing:
       enabled: true
@@ -13,6 +13,8 @@ source:
   connectionString: "esdb://localhost:2113?tls=false"
   concurrencyLimit: 1
 target:
-  connectionString: "Server=localhost;Database=bookings;User=sa;Password=Your_password123;Encrypt=True;TrustServerCertificate=True"
+  connectionString: "mongodb://mongoadmin:secret@localhost:27017"
+  database: test
+  collection: bookings
 grpc:
   uri: "http://localhost:9091"
