--- a/src/Eventuous.Connector/config.yaml
+++ b/src/Eventuous.Connector/config.yaml
@@ -11,10 +11,11 @@ connector:
     traceSamplerProbability: 0
 source:
   connectionString: "esdb://localhost:2113?tls=false"
-  concurrencyLimit: 1
+  concurrencyLimit: 2
 target:
   connectionString: "mongodb://mongoadmin:secret@localhost:27017"
   database: test
   collection: bookings
 grpc:
   uri: "http://localhost:9091"
+  credentials: "insecure"
