Update to Eventuous 0.10.2

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -3,14 +3,14 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <EventuousVersion>0.8.4</EventuousVersion>
-        <OtelVersion>1.3.0-beta.1</OtelVersion>
+        <EventuousVersion>0.10.2</EventuousVersion>
+        <OtelVersion>1.3.0</OtelVersion>
         <OtelExtensionsVersion>1.0.0-rc9.3</OtelExtensionsVersion>
         <RepoRoot>$([System.IO.Directory]::GetParent($(MSBuildThisFileDirectory)).Parent.FullName)</RepoRoot>
     </PropertyGroup>
 
     <ItemGroup Condition="'$(IsTestProject)' != 'true'">
-        <PackageReference Include="MinVer" Version="3.1.0" PrivateAssets="All"/>
+        <PackageReference Include="MinVer" Version="4.1.0" PrivateAssets="All"/>
         <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" PrivateAssets="All"/>
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
         <None Include="$(RepoRoot)\e-logo.png" Pack="true" PackagePath="\"/>
