--- a/src/Eventuous.Connector/Eventuous.Connector.csproj
+++ b/src/Eventuous.Connector/Eventuous.Connector.csproj
@@ -6,7 +6,7 @@
     <ItemGroup>
         <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="$(OtelVersion)" />
         <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="$(OtelVersion)" />
-        <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="1.3.0-rc.2" />
+        <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.4.0-alpha.2" />
         <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="$(OtelVersion)" />
     </ItemGroup>
 
